--- a/styles/main.css
+++ b/styles/main.css
@@ -112,7 +112,7 @@ body h3,
 body h4,
 body h5,
 body h6 {
-  font-family: sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   margin: 0;
   text-rendering: geometricPrecision;
   -webkit-font-smoothing: antialiased;
@@ -139,7 +139,7 @@ body h6.title {
   text-transform: uppercase;
 }
 body p {
-  font-family: sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   margin: 0;
 }
 body ul {
@@ -194,8 +194,8 @@ body ul li {
   border-radius: 4px;
   color: #333366;
   display: inline-block;
-  font-family: sans-serif;
-  font-size: 16px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 17px;
   font-weight: bold;
   height: 36px;
   letter-spacing: -0.5px;
@@ -527,7 +527,7 @@ nav#main-nav ul li a:hover {
   padding-bottom: 80px;
 }
 #about p {
-  font-size: 17px;
+  font-size: 18px;
   line-height: 28px;
   margin: 0 auto;
   max-width: 325px;
