--- a/styles/main.less
+++ b/styles/main.less
@@ -157,7 +157,7 @@ body {
 		&:hover { text-decoration: none; }
 	}
 	h1, h2, h3, h4, h5, h6 { 
-		font-family: sans-serif;
+		font-family: 'Source Sans Pro',sans-serif;
 		margin: 0;
 		text-rendering: geometricPrecision;
 		.font-smoothing;
@@ -174,7 +174,7 @@ body {
 		}
 	}
 	p {
-		font-family: sans-serif;
+		font-family: 'Source Sans Pro',sans-serif;
 		margin: 0;
 	}
 	ul {
@@ -228,8 +228,8 @@ body {
 			border-radius: 4px;
 			color: @blue-dark;
 			display: inline-block;
-			font-family: sans-serif;
-			font-size: 16px;
+			font-family: 'Source Sans Pro',sans-serif;
+			font-size: 17px;
 			font-weight: bold;
 			height: 36px;
 			letter-spacing: -0.5px;
@@ -509,7 +509,7 @@ nav#main-nav {
 #about {
 	padding-bottom: 80px;
 	p {
-		font-size: 17px;
+		font-size: 18px;
 		line-height: 28px;
 		margin: 0 auto;
 		max-width: 325px;
