--- a/styles/main.less
+++ b/styles/main.less
@@ -167,7 +167,7 @@ body {
 			font-size: 140px;
 			line-height: 120px;
 			max-width: @width-wrap;
-			margin: 80px auto 20px auto;
+			margin: 60px auto 20px auto;
 			position: relative;
 			text-align: center;
 			text-transform: uppercase;
@@ -403,10 +403,6 @@ nav#main-nav {
 	img {
 		display: block;
 		margin: 0 auto 25px auto;
-
-							height: 175px;
-							width: 415px;
-							background-color: #bbb;
 	}
 	h1 {
 		font-family: 'passionone',sans-serif;
@@ -443,10 +439,10 @@ nav#main-nav {
 						.transition(all 0.5s cubic-bezier(0.75, 0.25, 0.25, 0.75));
 						img {
 							display: block;
+							max-height: 500px;
 							max-width: 420px;
 							width: 100%;
-
-									background-color: #bbb;
+							.transition(all 0.2s ease-in-out);
 						}
 					}
 					.info-wrap {
@@ -486,6 +482,9 @@ nav#main-nav {
 				}
 				&:hover {
 					article {
+						.image {
+							img { .transform(scale(1.25)); }
+						}
 						.info-wrap {
 							span { height: 100%; }
 							.info {
@@ -519,15 +518,15 @@ nav#main-nav {
 		font-family: 'lora',serif;
 		font-weight: bold;
 		font-size: 34px;
-		line-height: 38px;
-		margin: 20px auto;
+		line-height: 40px;
+		margin: 18px auto;
 		max-width: 325px;
 	}
 }
 #contact {
 	background-color: @blue-light;
 	.wrapper {
-		margin: 80px auto 260px auto;
+		margin: 80px auto 300px auto;
 		max-width: (@width-wrap / 2);
 		text-align: center;
 		h3 {
