--- a/styles/main.less
+++ b/styles/main.less
@@ -483,7 +483,17 @@ nav#main-nav {
 				&:hover {
 					article {
 						.image {
-							img { .transform(scale(1.25)); }
+							img { .transform(scale(1.15)); }
+							&:after {
+								content: " ";
+								position: absolute;
+								width: 100%;
+								height: 100%;
+								top: 0;
+								left: 0;
+								background: url("../img/assets/overlay.png");
+								opacity: 0.5;
+							}
 						}
 						.info-wrap {
 							span { height: 100%; }
