--- a/styles/main.less
+++ b/styles/main.less
@@ -214,7 +214,7 @@ body {
 	}
 	.wrapper {
 		margin: 0 auto;
-		padding: 120px 0;
+		padding: 100px 0;
 		text-align: center;
 		h1 {
 			color: @blue-lighter;
@@ -492,18 +492,18 @@ nav#main-nav {
 								top: 0;
 								left: 0;
 								background: url("../img/assets/overlay.png");
-								opacity: 0.5;
+								opacity: 0.6;
 							}
 						}
 						.info-wrap {
 							span { height: 100%; }
 							.info {
 								h4 {
-									color: @blue;
+									color: @blue-light;
 									.transition(all 0.2s ease-in-out);
 								}
 								p {
-									color: @blue;
+									color: @blue-light;
 									opacity: 0.75;
 									.transition(all 0.2s ease-in-out);
 								}
