--- a/styles/main.css
+++ b/styles/main.css
@@ -152,76 +152,19 @@ body ul.horiz-list li {
 body ul li {
   list-style: none;
 }
-.section {
+body .section {
   margin: 0 auto;
   overflow: hidden;
   position: relative;
   width: 100%;
 }
-.section .wrapper {
+body .section .wrapper {
   display: block;
   margin: 0 auto;
   overflow: hidden;
   position: relative;
   width: 100%;
   max-width: 1680px;
-}
-.divider {
-  background-color: #333366;
-}
-.divider .bg-image {
-  background: url('../img/divider-bg.png') 50% 0 no-repeat;
-  height: 100%;
-  margin: 0 auto;
-  opacity: 0.55;
-  position: absolute;
-  width: 100%;
-}
-.divider .wrapper {
-  margin: 0 auto;
-  padding: 100px 0;
-  text-align: center;
-}
-.divider .wrapper h1 {
-  color: #ededfc;
-  font-family: 'lora', serif;
-  font-size: 40px;
-  font-weight: normal;
-  line-height: 36px;
-}
-.divider .wrapper a.btn {
-  background-color: #d2d2f9;
-  border-radius: 4px;
-  color: #333366;
-  display: inline-block;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 17px;
-  font-weight: bold;
-  height: 36px;
-  letter-spacing: -0.5px;
-  line-height: 34px;
-  margin: 30px 0 0 0;
-  padding: 1px 16px;
-  text-transform: uppercase;
-  white-space: nowrap;
-  -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
-  -ms-font-smoothing: antialiased;
-  -o-font-smoothing: antialiased;
-  font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-.divider .wrapper a.btn:hover {
-  background-color: #000044;
-  color: #d2d2f9;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-.divider .wrapper a.btn i {
-  margin: 0 4px 0 0;
 }
 nav#main-nav {
   font-family: 'znikomit', sans-serif;
@@ -364,32 +307,42 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-#header {
+#footer {
+  background-color: #000044;
+  padding: 15px 40px;
+}
+#footer p {
+  color: #d2d2f9;
+  font-family: sans-serif;
+  font-size: 11px;
+  font-weight: 100;
+}
+.index #home {
   background: url('../img/intro-bg.png') 50% 0 repeat-x;
   height: 700px;
   margin: 0 auto;
   position: relative;
   width: 100%;
 }
-#header #main-social {
+.index #home #main-social {
   position: absolute;
   top: 40px;
   right: 40px;
   width: 200px;
   z-index: 999;
 }
-#header #main-social ul {
+.index #home #main-social ul {
   float: right;
 }
-#header #main-social ul li {
+.index #home #main-social ul li {
   margin: 0 0 0 8px;
 }
-#header #main-social ul li a i {
+.index #home #main-social ul li a i {
   color: #9999cc;
   font-size: 28px;
   line-height: 24px;
 }
-#header #main-social ul li a:hover i {
+.index #home #main-social ul li a:hover i {
   color: #000044;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -397,7 +350,7 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-#header h3 {
+.index #home h3 {
   font-family: 'lora', serif;
   font-size: 28px;
   font-weight: normal;
@@ -406,29 +359,29 @@ nav#main-nav ul li a:hover {
   margin: 40px 0 20px 0;
   text-align: center;
 }
-#header img {
+.index #home img {
   display: block;
   margin: 0 auto 25px auto;
 }
-#header h1 {
+.index #home h1 {
   font-family: 'passionone', sans-serif;
   font-size: 110px;
   line-height: 78px;
   text-align: center;
   text-transform: uppercase;
 }
-#header h1 span {
+.index #home h1 span {
   font-size: 70px;
   line-height: 0;
 }
-#portfolio {
+.index #portfolio {
   background-color: #d2d2f9;
 }
-#portfolio #grid {
+.index #portfolio #grid {
   margin: 0;
   overflow: auto;
 }
-#portfolio #grid li {
+.index #portfolio #grid li {
   display: block;
   float: left;
   height: auto;
@@ -447,7 +400,7 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
-#portfolio #grid li a article .image {
+.index #portfolio #grid li a article .image {
   overflow: hidden;
   position: relative;
   -webkit-transition: all 0.5s cubic-bezier(0.75, 0.25, 0.25, 0.75);
@@ -456,7 +409,7 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.5s cubic-bezier(0.75, 0.25, 0.25, 0.75);
   transition: all 0.5s cubic-bezier(0.75, 0.25, 0.25, 0.75);
 }
-#portfolio #grid li a article .image img {
+.index #portfolio #grid li a article .image img {
   display: block;
   max-height: 500px;
   max-width: 420px;
@@ -467,12 +420,12 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-#portfolio #grid li a article .info-wrap {
+.index #portfolio #grid li a article .info-wrap {
   max-height: 120px;
   overflow: hidden;
   position: relative;
 }
-#portfolio #grid li a article .info-wrap span {
+.index #portfolio #grid li a article .info-wrap span {
   background-color: #000044;
   display: block;
   height: 0%;
@@ -486,33 +439,33 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
-#portfolio #grid li a article .info-wrap .info {
+.index #portfolio #grid li a article .info-wrap .info {
   padding: 30px 20px;
 }
-#portfolio #grid li a article .info-wrap .info h4 {
+.index #portfolio #grid li a article .info-wrap .info h4 {
   font-family: 'lora';
   font-weight: bold;
   font-size: 24px;
   line-height: 24px;
 }
-#portfolio #grid li a article .info-wrap .info h4.archive {
+.index #portfolio #grid li a article .info-wrap .info h4.archive {
   font-family: 'znikomit', sans-serif;
   font-size: 26px;
   text-transform: uppercase;
 }
-#portfolio #grid li a article .info-wrap .info p {
+.index #portfolio #grid li a article .info-wrap .info p {
   font-size: 10px;
   margin: 3px 0 0 0;
   text-transform: uppercase;
 }
-#portfolio #grid li a:hover article .image img {
+.index #portfolio #grid li a:hover article .image img {
   -webkit-transform: scale(1.15);
   -moz-transform: scale(1.15);
   -ms-transform: scale(1.15);
   -o-transform: scale(1.15);
   transform: scale(1.15);
 }
-#portfolio #grid li a:hover article .image:after {
+.index #portfolio #grid li a:hover article .image:after {
   content: " ";
   position: absolute;
   width: 100%;
@@ -522,10 +475,10 @@ nav#main-nav ul li a:hover {
   background: url("../img/assets/overlay.png");
   opacity: 0.6;
 }
-#portfolio #grid li a:hover article .info-wrap span {
+.index #portfolio #grid li a:hover article .info-wrap span {
   height: 100%;
 }
-#portfolio #grid li a:hover article .info-wrap .info h4 {
+.index #portfolio #grid li a:hover article .info-wrap .info h4 {
   color: #d2d2f9;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -533,7 +486,7 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-#portfolio #grid li a:hover article .info-wrap .info p {
+.index #portfolio #grid li a:hover article .info-wrap .info p {
   color: #d2d2f9;
   opacity: 0.75;
   -webkit-transition: all 0.2s ease-in-out;
@@ -542,16 +495,16 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-#about {
+.index #about {
   padding-bottom: 80px;
 }
-#about p {
+.index #about p {
   font-size: 18px;
   line-height: 28px;
   margin: 0 auto;
   max-width: 325px;
 }
-#about blockquote {
+.index #about blockquote {
   color: #9999cc;
   font-family: 'lora', serif;
   font-weight: bold;
@@ -560,34 +513,34 @@ nav#main-nav ul li a:hover {
   margin: 18px auto;
   max-width: 325px;
 }
-#contact {
+.index #contact {
   background-color: #d2d2f9;
 }
-#contact .wrapper {
+.index #contact .wrapper {
   margin: 80px auto 300px auto;
   max-width: 400px;
   text-align: center;
 }
-#contact .wrapper h3 {
+.index #contact .wrapper h3 {
   font-family: 'lora', serif;
   font-size: 34px;
 }
-#contact .wrapper ul {
+.index #contact .wrapper ul {
   border-top: 1px solid #9999cc;
   margin-top: 4px;
   padding-top: 12px;
 }
-#contact .wrapper ul li {
+.index #contact .wrapper ul li {
   margin: 0 10px 0 0;
 }
-#contact .wrapper ul li:last-child {
+.index #contact .wrapper ul li:last-child {
   margin: 0;
 }
-#contact .wrapper ul li a i {
+.index #contact .wrapper ul li a i {
   color: #9999cc;
   font-size: 40px;
 }
-#contact .wrapper ul li a i:hover {
+.index #contact .wrapper ul li a i:hover {
   color: #000044;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -595,13 +548,94 @@ nav#main-nav ul li a:hover {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-#footer {
-  background-color: #000044;
-  padding: 15px 40px;
+.index .divider {
+  background-color: #333366;
 }
-#footer p {
+.index .divider .bg-image {
+  background: url('../img/divider-bg.png') 50% 0 no-repeat;
+  height: 100%;
+  margin: 0 auto;
+  opacity: 0.55;
+  position: absolute;
+  width: 100%;
+}
+.index .divider .wrapper {
+  margin: 0 auto;
+  padding: 100px 0;
+  text-align: center;
+}
+.index .divider .wrapper h1 {
+  color: #ededfc;
+  font-family: 'lora', serif;
+  font-size: 40px;
+  font-weight: normal;
+  line-height: 36px;
+}
+.index .divider .wrapper a.btn {
+  background-color: #d2d2f9;
+  border-radius: 4px;
+  color: #333366;
+  display: inline-block;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 17px;
+  font-weight: bold;
+  height: 36px;
+  letter-spacing: -0.5px;
+  line-height: 34px;
+  margin: 30px 0 0 0;
+  padding: 1px 16px;
+  text-transform: uppercase;
+  white-space: nowrap;
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  -ms-font-smoothing: antialiased;
+  -o-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.index .divider .wrapper a.btn:hover {
+  background-color: #000044;
   color: #d2d2f9;
-  font-family: sans-serif;
-  font-size: 11px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.index .divider .wrapper a.btn i {
+  margin: 0 4px 0 0;
+}
+.resume .section .wrapper {
+  max-width: 800px;
+  overflow: visible;
+}
+.resume header {
+  background-color: #333366;
+  padding: 40px 0;
+}
+.resume header img {
+  border-radius: 50%;
+  float: left;
+  margin: -20px 20px -20px 0;
+}
+.resume header .profile {
+  float: left;
+}
+.resume header .profile h1 {
+  color: #d2d2f9;
+  font-family: 'znikomit';
+  font-size: 68px;
+  line-height: 58px;
+}
+.resume header .profile h3 {
+  color: #9999cc;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 30px;
   font-weight: 100;
+  letter-spacing: -0.5px;
+  line-height: 30px;
+  margin: 12px 0 0 3px;
+}
+.resume header .info {
+  float: left;
 }
